# ZenlessZoneZero-OneDragon

./: .coderabbit.yaml  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  contributer.yaml  debug.bat  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  run_inventory_scanner.py
.claude-plugin/uv-pyright-lsp/: README.md
.devin/: wiki.json
.githooks/: pre-push
.github/: README.md
.github/workflows/: build-auto-battle-merged.yml  build-release.yml  build-running-resources.yml  issue-automation.yml  mirrorchyan_release_note.yml  mirrorchyan_uploading.yml  test-check.yml  update-contributors.yml  update-redemption-code.yml  update-test-branch.yml
assets/character_weight/: Aria.json  Grace_Howard.json  Hoshimi_Miyabi.json  Ye_Shunguang.json  Zhao.json
assets/game_data/: compendium_data.yml  map_area.yml  map_area_all.yml
assets/image_analysis_pipelines/: lock-far.yml  大世界-快捷手册坐标.yml  套装筛选.yml  调查战略等级圈圈.yml  驱动盘方格-代理人-装备详细.yml  驱动盘方格-代理人-驱动盘详细.yml  驱动盘进度条-代理人-装备详细.yml
assets/wiki_data/: zzz_translation.json
config/: project.yml  redemption_codes.sample.yml  redemption_codes.yml  repository.yml  zzz_translation.json
config/auto_battle/: 全配队通用.merged.yml  全配队通用.sample.yml  击破站场-强攻速切.merged.yml  强攻站场-击破支援速切.merged.yml  自动守护.merged.yml
config/auto_battle_operation/: 仪玄-凸.sample.yml  仪玄-喧嚣终结技.sample.yml  仪玄-太极合轴.sample.yml  仪玄-法术终结技.sample.yml  伊芙琳-长按A合轴连携技.sample.yml  伊芙琳-长按E二连合轴连携技.sample.yml  伊芙琳-长按E合轴连携技.sample.yml  凯撒-特殊技合轴.sample.yml  卢西娅-强化特殊技合轴.sample.yml  卢西娅-普通攻击合轴.sample.yml  可琳-连携攻击.sample.yml  叶瞬光-终结技-起.sample.yml  奥菲丝-特殊攻击合轴.sample.yml  妮可-终结技.sample.yml  妮可-闪A上弹普攻二连.sample.yml  妮可-闪A普攻.sample.yml  悠真-强化特殊技合轴.sample.yml  扳机-快速狙击.sample.yml  (+37 more)
deploy/: OneDragon-Installer.spec  OneDragon-Launcher.spec  OneDragon-RuntimeLauncher.spec  build_full.bat  generate_freeze_seed.py  hook_path_inject.py  module_manifest.py
docs/: README.md
node_service/: Python-Node.js-集成架构文档.md  index.js  package-lock.json  package.json
plugins/: .gitkeep  README.md
service/: zzz_data_model.py  zzz_save_battle_class.py
skills/: SKILL.md
tests/: manual_verification.py
(+1286 files in other folders)
